# pypper

./: .gitignore  Makefile  README.md  pyproject.toml
.circleci/: config.yml
pypper/cloud_handling/aws/: s3.py
pypper/cloud_handling/gcp/: google_bucket.py
pypper/data_crawling/: __init__.py  base_crawling.py  image_crawling.py
pypper/data_processing/: __init__.py
pypper/data_processing/audio/: speech_processing.py
pypper/data_processing/datetime/: datetime_processing.py
pypper/data_processing/json/: json_normalize.py
pypper/data_processing/nlp/: tokenizing.py
pypper/file_handling/: __init__.py  csv_handling.py  file_system_handling.py  pdf_handling.py
pypper/google_handling/: bigquery.py  google_bucket.py
pypper/mongodb_handling/: data_process.py
pypper/util_functions/: read_pdf.py
pypper/utils/: enums.py
src/data_crawling/: __init__.py  image_crawler.py  image_crawling.py
src/data_processing/: __init__.py
src/file_handling/: __init__.py  csv_handler.py  csv_handling.py  file_system_handling.py  pdf_handler.py  pdf_handling.py
src/google_handling/: bigquery.py  google_bucket.py
src/mongodb_handling/: data_process.py
src/utils/: enums.py
test/: test_datetime_processing.py  test_df_processing.py  test_file_system_handling.py  test_image_crawler.py  test_image_crawling.py  test_pdf_handling.py  test_read_pdf.py  test_tokenizing.py  test_translation.py  test_translator.py
tests/: test_datetime_processing.py  test_file_system_handling.py  test_image_crawling.py  test_pdf_handling.py  test_tokenizing.py  test_translation.py
(+11 files in other folders)
