[tool.poetry]
name = "pypper"
version = "0.1.0"
description = ""
authors = ["nguyen <nguyenhainguyen2606@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
pypdf = "^4.1.0"
selenium = "^4.18.1"
beautifulsoup4 = "^4.12.3"
translators = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
